# geminiocr

./: .gitignore  README.md  package-lock.json  package.json  vercel.json
.github/workflows/: _build.yml  release-linux.yml  release-macos.yml  release-windows.yml  release.yml
.trellis/spec/frontend/: component-guidelines.md  desktop-integration.md  directory-structure.md  hook-guidelines.md  index.md  quality-guidelines.md  state-management.md  type-safety.md
api/: gemini.js  recognize.js  recognizeOpenAI.js  recognizeSync.js
api/gemini/: [...path].js
docs/plans/: 2026-03-18-desktop-four-fixes.md  2026-07-04-desktop-polish.md
docs/summary/: ContextLibrary_Desktop_Quick_OCR.md
public/: index.html
scripts/: check-env-safety.js  copy-pdf-worker.js
src/: App.css  App.desktop.test.js  App.js  App.test.js  setupTests.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ConfigModal.js  ImagePane.js  ImagePane.test.js  ResultPane.js  ResultPane.test.js  SplitPane.js  SplitPane.test.js  Toast.js  Toast.test.js  Toolbar.js  Toolbar.test.js  UploadDropzone.js  icons.js
src/desktop/: clipboardImageToFile.js  clipboardImageToFile.test.js  desktopPreferences.js  desktopPreferences.test.js  pasteGuards.js  pasteGuards.test.js  shortcutBootstrap.js  shortcutBootstrap.test.js  shortcutRecorder.js  shortcutRecorder.test.js  tauriBridge.js  windowBootstrap.js  windowBootstrap.test.js
src/hooks/: useOcrSession.js  useOcrSession.test.js
(+58 files in other folders)
